manifests/platform/services/ops/ceph-dashboard-lb/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: external-ceph-dashboard-route
spec:
  parentRefs:
    - name: envoy-gateway-internal
      namespace: envoy-gateway
      sectionName: https
  hostnames:
    - "ceph.chik4ge.me"
  rules:
    - backendRefs:
        - group: gateway.envoyproxy.io
          kind: Backend
          name: external-ceph-dashboard-backend
          port: 8080
